--- a/package.yaml
+++ b/package.yaml
@@ -17,6 +17,11 @@ extra-source-files:
 
 dependencies:
 - base >= 4.12 && < 5
+- text
+- containers
+- mtl
+- diagnose
+- bifunctors
 
 default-extensions:
 - BangPatterns
@@ -56,17 +61,6 @@ ghc-options:
 
 library:
   source-dirs: src
-
-executables:
-  lookahead-exe:
-    main: Main.hs
-    source-dirs: exe
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - lookahead
 
 tests:
   lookahead-test:
