--- a/lookahead.cabal
+++ b/lookahead.cabal
@@ -63,6 +63,7 @@ library
     , containers
     , diagnose
     , mtl
+    , recursion-schemes
     , text
   default-language: GHC2021
 
@@ -106,6 +107,7 @@ test-suite lookahead-test
     , diagnose
     , lookahead
     , mtl
+    , recursion-schemes
     , tasty
     , tasty-hunit
     , text
