--- a/lookahead.cabal
+++ b/lookahead.cabal
@@ -26,7 +26,8 @@ source-repository head
 
 library
   exposed-modules:
-      Lookahead.Main
+      Lookahead
+      Lookahead.Examples
   other-modules:
       Paths_lookahead
   hs-source-dirs:
