--- a/looksie.cabal
+++ b/looksie.cabal
@@ -63,6 +63,7 @@ library
     , bifunctors
     , containers
     , errata
+    , mmorph
     , mtl
     , recursion-schemes
     , text
@@ -108,6 +109,7 @@ test-suite looksie-test
     , containers
     , errata
     , looksie
+    , mmorph
     , mtl
     , recursion-schemes
     , tasty
