--- a/looksie.cabal
+++ b/looksie.cabal
@@ -66,6 +66,7 @@ library
     , mmorph
     , mtl
     , recursion-schemes
+    , scientific
     , text
     , vector
   default-language: GHC2021
@@ -112,6 +113,7 @@ test-suite looksie-test
     , mmorph
     , mtl
     , recursion-schemes
+    , scientific
     , tasty
     , tasty-hunit
     , text
