--- a/package.yaml
+++ b/package.yaml
@@ -17,15 +17,15 @@ extra-source-files:
 
 dependencies:
 - base >= 4.12 && < 5
-- bifunctors
-- containers
-- errata
-- mmorph
-- mtl
-- recursion-schemes
-- scientific
-- text
-- vector
+- bifunctors >= 5.5 && < 5.6
+- containers >= 0.6 && < 0.7
+- errata >= 0.4 && < 0.5
+- mmorph >= 1.2 && < 1.3
+- mtl >= 2.2 && < 2.3
+- recursion-schemes >= 5.2 && < 5.3
+- scientific >= 0.3 && < 0.4
+- text >= 1.2 && < 2.1
+- vector >= 0.12 && < 0.13
 
 default-extensions:
 - BangPatterns
