--- a/looksee/looksee.cabal
+++ b/looksee/looksee.cabal
@@ -5,7 +5,7 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           looksee
-version:        0.5.0
+version:        0.5.1
 synopsis:       parser with looksee
 description:    Please see the README on GitHub at <https://github.com/ejconlon/looksee#readme>
 homepage:       https://github.com/ejconlon/looksee#readme
@@ -62,13 +62,13 @@ library
       base >=4.12 && <5
     , bifunctors ==5.5.*
     , containers ==0.6.*
-    , errata ==0.4.*
+    , errata >=0.4.0.1 && <0.5
     , mmorph ==1.2.*
     , mtl ==2.2.*
     , recursion-schemes ==5.2.*
     , scientific ==0.3.*
     , text >=1.2 && <2.1
-    , vector ==0.12.*
+    , vector >=0.12 && <0.14
   default-language: GHC2021
 
 test-suite looksee-test
@@ -108,7 +108,7 @@ test-suite looksee-test
       base >=4.12 && <5
     , bifunctors ==5.5.*
     , containers ==0.6.*
-    , errata ==0.4.*
+    , errata >=0.4.0.1 && <0.5
     , looksee
     , mmorph ==1.2.*
     , mtl ==2.2.*
@@ -117,5 +117,5 @@ test-suite looksee-test
     , tasty
     , tasty-hunit
     , text >=1.2 && <2.1
-    , vector ==0.12.*
+    , vector >=0.12 && <0.14
   default-language: GHC2021
