--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-21.0
+resolver: lts-21.6
 
 ghc-options:
   "$everything": -haddock
@@ -7,8 +7,5 @@ packages:
 - looksee
 
 extra-deps:
-# TODO use hackage dep when published
-# - errata-0.4.0.1
-- git: git@github.com:ejconlon/errata.git
-  commit: d793e762274a71f11d2b9b298c2edbe19b13617f
+- errata-0.4.0.1
 
