--- a/looksee-trip/package.yaml
+++ b/looksee-trip/package.yaml
@@ -20,6 +20,9 @@ extra-source-files:
 dependencies:
 - base >= 4.12 && < 5
 - daytripper >= 0.3 && < 0.4
+- looksee >= 0.5 && < 0.6
+- prettyprinter >= 1.7 && < 1.8
+
 # - bifunctors >= 5.5 && < 5.7
 # - containers >= 0.6 && < 0.7
 # - errata >= 0.4.0.1 && < 0.5
