--- a/looksee-trip/package.yaml
+++ b/looksee-trip/package.yaml
@@ -1,5 +1,5 @@
 name: looksee-trip
-version: 0.5.2
+version: 0.5.3
 
 github: ejconlon/looksee
 license: BSD3
@@ -22,6 +22,7 @@ dependencies:
 - daytripper >= 0.3 && < 0.4
 - looksee >= 0.5 && < 0.6
 - prettyprinter >= 1.7 && < 1.8
+- text >= 2.0 && < 2.1
 
 # - bifunctors >= 5.5 && < 5.7
 # - containers >= 0.6 && < 0.7
