--- a/stack.yaml
+++ b/stack.yaml
@@ -8,15 +8,17 @@ allow-newer-deps:
 
 packages:
 - looksee
+- looksee-sexp
 - looksee-trip
 
 extra-deps:
+- bowtie-0.1.0
 - errata-0.4.0.1
+- falsify-0.2.0
 # TODO Use released version when falsify bumps
 # - daytripper-0.3.1
 - git: git@github.com:ejconlon/daytripper.git
   commit: f676b6e5781a51bfe9a4db34b218b696e0286392
-- falsify-0.2.0
 
 # TODO Remove when falsify bumps
 allow-newer: true
