--- a/looksee/package.yaml
+++ b/looksee/package.yaml
@@ -1,5 +1,5 @@
 name: looksee
-version: 0.5.3
+version: 0.6.0
 
 github: ejconlon/looksee
 license: BSD3
@@ -22,6 +22,7 @@ dependencies:
 - bifunctors >= 5.5 && < 5.7
 - containers >= 0.6 && < 0.7
 - errata >= 0.4.0.1 && < 0.5
+- foldl >= 1.4 && < 1.5
 - mmorph >= 1.2 && < 1.3
 - mtl >= 2.2 && < 2.4
 - recursion-schemes >= 5.2 && < 5.3
