--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-22.2
+resolver: lts-22.3
 
 ghc-options:
   "$everything": -haddock
@@ -8,8 +8,8 @@ allow-newer-deps:
 
 packages:
 - looksee
-- looksee-sexp
-- looksee-trip
+# - looksee-sexp
+# - looksee-trip
 
 extra-deps:
 - bowtie-0.1.0
