--- a/looksee/looksee.cabal
+++ b/looksee/looksee.cabal
@@ -5,7 +5,7 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           looksee
-version:        0.5.3
+version:        0.6.0
 synopsis:       A simple text parser with decent errors
 description:    Please see the README on GitHub at <https://github.com/ejconlon/looksee#readme>
 category:       Parsing
@@ -17,7 +17,7 @@ copyright:      (c) 2023 Eric Conlon
 license:        BSD3
 build-type:     Simple
 tested-with:
-    GHC == 9.6.3
+    GHC == 9.6.4
 extra-source-files:
     README.md
 
@@ -119,8 +119,8 @@ test-suite looksee-test
     , mtl >=2.2 && <2.4
     , recursion-schemes ==5.2.*
     , scientific ==0.3.*
-    , tasty
-    , tasty-hunit
+    , tasty >=1.4.3 && <1.5
+    , tasty-hunit ==0.10.*
     , text >=1.2 && <2.1
     , vector >=0.12 && <0.14
   default-language: GHC2021
