--- a/stack.yaml
+++ b/stack.yaml
@@ -14,10 +14,6 @@ packages:
 extra-deps:
 - bowtie-0.2.0
 - errata-0.4.0.2
-- falsify-0.2.0
+- falsify-0.2.0@r1
 - daytripper-0.3.1
 
-# TODO Remove when falsify bumps
-allow-newer: true
-allow-newer-deps:
-- falsify
