--- a/looksee/looksee.cabal
+++ b/looksee/looksee.cabal
@@ -1,11 +1,11 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.38.0.
+-- This file has been generated from package.yaml by hpack version 0.39.1.
 --
 -- see: https://github.com/sol/hpack
 
 name:           looksee
-version:        0.8.1
+version:        0.8.2
 synopsis:       A simple text parser with decent errors
 description:    Please see the README on GitHub at <https://github.com/ejconlon/looksee#readme>
 category:       Parsing
@@ -65,7 +65,7 @@ library
   build-depends:
       base >=4.12 && <5
     , bifunctors >=5.5 && <5.7
-    , containers ==0.6.*
+    , containers >=0.6 && <0.8
     , errata >=0.4.0.1 && <0.5
     , mmorph ==1.2.*
     , mtl >=2.2 && <2.4
@@ -113,7 +113,7 @@ test-suite looksee-test
   build-depends:
       base >=4.12 && <5
     , bifunctors >=5.5 && <5.7
-    , containers ==0.6.*
+    , containers >=0.6 && <0.8
     , errata >=0.4.0.1 && <0.5
     , looksee
     , mmorph ==1.2.*
